Add endpoint for customer specific product recommendation
Also added documentation for the new endpoint GET /customer/me/recommendations
