# backend/documentation/swagger.yaml
@@ -385,6 +385,19 @@ paths:
                 $ref: '#/components/responses/NullData'
         '400':
           description: Invalid bearer token
+  /customer/me/recommendations:
+    get:
+      tags:
+        - customer
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/responses/SearchResults'
+        '400':
+          description: Internal error
   /customer:
     get:
       tags:
